--- a/src/styles/scss/base/_variables.scss
+++ b/src/styles/scss/base/_variables.scss
@@ -1,4 +1,9 @@
 $black: #000000;
 $white: #FFFFFF;
+$silverFoil: #AFAFAF;
 $sonicSilver: #777777;
 $darkSilver: #6D6D6D;
+$chineseWhite: #E1E1E1;
+$permanentGeraniumLake: #E03226;
+$silverSand: #C4C4C4;
+$red: #FF0000;
