update image links for hero

--- a/src/styles/scss/sections/_hero.scss
+++ b/src/styles/scss/sections/_hero.scss
@@ -100,13 +100,13 @@
             }
         }
         &-01{
-            background: url("/src/img/hero/hero__img-01.jpg") center / cover no-repeat;
+            background: url("../../img/hero/hero__img-01.jpg") center / cover no-repeat;
         }
         &-02{
-            background: url("/src/img/hero/hero__img-02.jpg") center / cover no-repeat;
+            background: url("../../img/hero/hero__img-02.jpg") center / cover no-repeat;
         }
         &-03{
-            background: url("/src/img/hero/hero__img-03.jpg") center / cover no-repeat;
+            background: url("../../img/hero/hero__img-03.jpg") center / cover no-repeat;
         }
     }
 }
