added catalog section

--- a/src/styles/scss/base/_variables.scss
+++ b/src/styles/scss/base/_variables.scss
@@ -8,3 +8,5 @@ $permanentGeraniumLake: #E03226;
 $silverSand: #C4C4C4;
 $red: #FF0000;
 $whiteChocolate: #EBE5D2;
+$blackOlive: #3E3E3E;
+$philippineSilver: #B8B8B8;
